<resources>
    <string name="app_name">掌上300英雄</string>
    <string name="copyright">Copyright© 2016 – 2017</string>
    <string name="power">Power by </string>
    <string name="author">NICOLITE</string>
    <string name="update">https://www.pgyer.com/Csva</string>
    <!--功能标题 -->
    <string name="news">资讯</string>
    <string name="heroes">英雄</string>
    <string name="equipment">装备</string>
    <string name="game">游戏</string>
    <string name="setting">设置</string>
    <string name="news_detail">资讯详情</string>
    <string name="about">关于</string>
    <!-- 英雄分类菜单 -->
    <string name="all">全部</string>
    <string name="assassin">刺客</string>
    <string name="warrior">战士</string>
    <string name="tank">坦克</string>
    <string name="shooter">射手</string>
    <string name="master">法师</string>
    <string name="assist">辅助</string>

    <!-- 英雄详情Tab导航-->
    <string name="data">数据</string>
    <string name="skill">技能</string>
    <string name="skin">皮肤</string>
    <string name="sound">语音</string>

    <!-- 技能类别-->
    <string name="consumption">消耗</string>
    <string name="chilldown">冷却</string>
    <string name="effectiveness">效果</string>
    <!-- 装备分类选项 -->
    <string name="battlefield_equipment">战场装备</string>
    <string name="arena_gear">竞技场装备</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>