<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/heroes_fragment"
    android:background="@color/white"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/heroes_title"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/menubar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/all_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/all"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/assassin_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/assassin"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/warrior_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/warrior"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/tank_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/tank"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/shooter_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/shooter"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/master_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/master"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/assist_heroes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/blue"
                android:text="@string/assist"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heroes_title">

        <android.support.v4.view.ViewPager
            android:id="@+id/heroes_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />
    </RelativeLayout>

</RelativeLayout>