<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_fragment"
    android:background="@color/white"
    android:clickable="true">
    <RelativeLayout
        android:id="@+id/equipment_title"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/blue"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="14dp"
            android:paddingTop="0dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:gravity="center" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="更多功能敬请期待"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@+id/text1"
        android:layout_alignParentStart="true"
         />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="问题反馈"
        android:layout_below="@id/text2"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/author"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="检查更新"
        android:layout_above="@id/author"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:layout_marginTop="5dp" />

</RelativeLayout>